--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-image-cropper-workspace",
+  "name": "@ktt45678/ngx-image-cropper-workspace",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
